feat: integrated backend api to portfolio page

--- a/src/components/portfolio-page/portfolio-page.component.html
+++ b/src/components/portfolio-page/portfolio-page.component.html
@@ -56,6 +56,12 @@
                 </div>
               }
             </div>
+          } @else {
+            <div class="mt-4 min-h-[60px] flex flex-col justify-center items-center">
+              <p class="text-center text-sm text-gray-500">
+                No insights to be displayed at the moment
+              </p>
+            </div>
           }
         </div>
       }
