--- a/src/components/portfolio-page/portfolio-page.component.html
+++ b/src/components/portfolio-page/portfolio-page.component.html
@@ -12,9 +12,8 @@
     </header>
 
     @if (isLoading()) {
-      <div class="text-center py-10">
-        <p class="text-gray-500">Loading portfolio...</p>
-      </div>
+      <app-portfolio-summary-skeleton></app-portfolio-summary-skeleton>
+      <app-portfolio-skeleton></app-portfolio-skeleton>
     } @else if (error()) {
       <div class="bg-red-50 border-l-4 border-red-400 p-4" role="alert">
         <p class="font-bold text-red-800">Error</p>
