--- a/src/components/transaction-list/transaction-list.component.html
+++ b/src/components/transaction-list/transaction-list.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white shadow-sm rounded-lg overflow-hidden">
-  <ul class="divide-y divide-gray-200">
+  <ul class="divide-y divide-gray-200 max-h-[calc(100vh-20rem)] overflow-y-auto">
     @if (isAdding()) {
       <app-transaction-edit-row (save)="save.emit($event)" (cancel)="cancel.emit()"></app-transaction-edit-row>
     }
