--- a/src/components/transactions-page/transactions-page.component.html
+++ b/src/components/transactions-page/transactions-page.component.html
@@ -11,25 +11,24 @@
       </div>
     </header>
 
-    @if (!error()) {
-      <div class="mb-8 p-6 bg-white rounded-lg shadow-sm">
-        <h2 class="text-sm font-medium text-gray-500">Total Amount Invested</h2>
-        <p class="mt-1 text-3xl sm:text-4xl font-bold tracking-tight text-gray-900">
-          {{ totalInvested() | currency:'EUR':'symbol':'1.2-2' }}
-        </p>
-      </div>
-    }
-
     @if (isLoading() && !isAddingTransaction()) {
-       <div class="text-center py-10">
-        <p class="text-gray-500">Loading transactions...</p>
-      </div>
+      <app-total-invested-skeleton></app-total-invested-skeleton>
+      <app-transaction-skeleton></app-transaction-skeleton>
     } @else if (error()) {
-       <div class="bg-red-50 border-l-4 border-red-400 p-4" role="alert">
+      <div class="bg-red-50 border-l-4 border-red-400 p-4" role="alert">
         <p class="font-bold text-red-800">Error</p>
         <p class="text-red-700">{{ error() }}</p>
       </div>
     } @else {
+      @if (!error()) {
+        <div class="mb-8 p-6 bg-white rounded-lg shadow-sm">
+          <h2 class="text-sm font-medium text-gray-500">Total Amount Invested</h2>
+          <p class="mt-1 text-3xl sm:text-4xl font-bold tracking-tight text-gray-900">
+            {{ totalInvested() | currency:'EUR':'symbol':'1.2-2' }}
+          </p>
+        </div>
+      }
+
       <app-transaction-list 
         [transactions]="transactions()" 
         [isAdding]="isAddingTransaction()"
