--- a/src/components/portfolio-list/portfolio-list.component.html
+++ b/src/components/portfolio-list/portfolio-list.component.html
@@ -20,17 +20,9 @@
                   <span class="text-gray-300">•</span>
                   <span>{{ item.currentAllocationPercentage | number:'1.1-1' }}% → {{ item.targetAllocationPercentage | number:'1.1-1' }}% Target</span>
                   
-                  @if (item.allocationDifference > 0.1) {
-                  <span class="font-medium text-red-600">
-                    {{ item.allocationDifference | number:'1.1-1' }}% Overweight Sell ~{{ item.rebalanceAmount | currency:'EUR':'symbol':'1.0-0' }}
+                  <span [class]="getRebalancingStatusClass(item)">
+                    {{ getRebalancingMessage(item) }}
                   </span>
-                  } @else if (item.allocationDifference < -0.1) {
-                  <span class="font-medium text-green-600">
-                    {{ -item.allocationDifference | number:'1.1-1' }}% Underweight Buy ~{{ -item.rebalanceAmount | currency:'EUR':'symbol':'1.0-0' }}
-                  </span>
-                  } @else {
-                  <span class="font-medium text-gray-500">Balanced</span>
-                  }
               </div>
             </div>
           </div>
