fix: fxied portfolio scrolling

--- a/src/components/portfolio-list/portfolio-list.component.html
+++ b/src/components/portfolio-list/portfolio-list.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white shadow-sm rounded-lg overflow-hidden">
-  <ul class="divide-y divide-gray-200">
+  <ul class="divide-y divide-gray-200 max-h-[calc(100vh-20rem)] overflow-y-auto">
     @for (item of portfolio(); track item.ticker) {
       <li class="group">
         <!-- Parent Item -->
