--- a/src/components/transactions-page/transactions-page.component.html
+++ b/src/components/transactions-page/transactions-page.component.html
@@ -59,30 +59,38 @@
     </div>
   </div>
 
-  <!-- Right Pane (45% width on large screens, full width on mobile) - Transactions List -->
+  <!-- Right Pane (45% width on large screens, full width on mobile) - Transactions List or Recurring Investments -->
   <div class="w-full lg:w-[45%] min-h-[400px] lg:h-full overflow-hidden flex flex-col p-4 sm:p-6">
-    <!-- Transactions List -->
-    @if (isLoading() && !isAddingTransaction()) {
-      <app-transaction-skeleton></app-transaction-skeleton>
-    } @else if (error()) {
-      <div class="p-4 sm:p-6">
-        <div class="bg-red-50 border-l-4 border-red-400 p-4" role="alert">
-          <p class="font-bold text-red-800">Error</p>
-          <p class="text-red-700">{{ error() }}</p>
+    @if (activeView() === 'transactions') {
+      <!-- Transactions List -->
+      @if (isLoading() && !isAddingTransaction()) {
+        <app-transaction-skeleton></app-transaction-skeleton>
+      } @else if (error()) {
+        <div class="p-4 sm:p-6">
+          <div class="bg-red-50 border-l-4 border-red-400 p-4" role="alert">
+            <p class="font-bold text-red-800">Error</p>
+            <p class="text-red-700">{{ error() }}</p>
+          </div>
         </div>
-      </div>
+      } @else {
+        <app-transaction-list 
+          [transactions]="transactions()" 
+          [isAdding]="isAddingTransaction()"
+          [isLoading]="isLoading()"
+          [error]="error()"
+          (save)="saveTransaction($event)"
+          (cancel)="cancelNewTransaction()"
+          (update)="updateTransaction($event)"
+          (delete)="deleteTransaction($event)"
+          (toggleAdd)="toggleAddTransaction()"
+          (navigateToRecurring)="navigateToRecurring()">
+        </app-transaction-list>
+      }
     } @else {
-      <app-transaction-list 
-        [transactions]="transactions()" 
-        [isAdding]="isAddingTransaction()"
-        [isLoading]="isLoading()"
-        [error]="error()"
-        (save)="saveTransaction($event)"
-        (cancel)="cancelNewTransaction()"
-        (update)="updateTransaction($event)"
-        (delete)="deleteTransaction($event)"
-        (toggleAdd)="toggleAddTransaction()">
-      </app-transaction-list>
+      <!-- Recurring Investments List -->
+      <app-recurring-investments-list
+        (navigateToTransactions)="navigateToTransactions()">
+      </app-recurring-investments-list>
     }
   </div>
 </main>
