--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div style="height: 100vh; overflow: hidden;">
+  <router-outlet></router-outlet>
+  <ngx-sonner-toaster position="bottom-right" />
+</div>
