--- a/src/components/transaction-list/transaction-list.component.html
+++ b/src/components/transaction-list/transaction-list.component.html
@@ -41,7 +41,7 @@
           (cancel)="cancelEdit()">
         </app-transaction-edit-row>
       } @else {
-        <li class="group p-3 hover:bg-gray-50 transition-colors duration-150 rounded">
+        <li class="group p-3 hover:bg-gray-50 transition-colors duration-150 rounded relative">
           <div class="flex items-start gap-3">
             <!-- Left: Icon -->
             <div class="flex-shrink-0">
@@ -60,7 +60,9 @@
               <div class="text-xs text-gray-500 flex items-center gap-1 flex-wrap">
                 <span>{{ transaction.ticker }}</span>
                 <span>•</span>
-                <span class="capitalize">{{ transaction.transactionType }}</span>
+                <span [class]="getTransactionTypeLabelClass(transaction)">
+                  {{ getTransactionTypeLabel(transaction) }}
+                </span>
                 @if (transaction.transactionType !== 'dividend') {
                   <span>•</span>
                   <span>{{ transaction.shares | number:'1.0-4' }} shares @ {{ transaction.sharePrice | currency:'EUR':'symbol':'1.0-4' }}</span>
@@ -69,7 +71,7 @@
             </div>
 
             <!-- Right: Stacked Content -->
-            <div class="flex-shrink-0 text-right">
+            <div class="flex-shrink-0 text-right pr-12">
               <!-- Top Line: Amount (Bold) -->
               <div class="font-bold mb-1" [class]="{
                 'text-red-600': transaction.transactionType === 'buy',
@@ -83,15 +85,24 @@
               </div>
             </div>
 
-            <!-- Action Buttons - visible on group-hover -->
-            <div class="flex-shrink-0 flex items-center gap-1 opacity-0 group-hover:opacity-100 transition-opacity duration-200">
-              <button (click)="startEdit(transaction)" class="p-1.5 text-gray-500 hover:bg-gray-200 rounded-full transition-colors">
+            <!-- Action Buttons - Ghost Toolbar (visible on group-hover) -->
+            <div class="hidden group-hover:flex absolute right-3 top-1/2 -translate-y-1/2 bg-white shadow-sm border border-gray-100 rounded-full px-2 py-1 items-center gap-1 z-10">
+              <button 
+                (click)="startEdit(transaction)" 
+                class="text-gray-400 hover:text-blue-600 hover:bg-blue-50 rounded p-1 transition-colors duration-150">
                 <span class="sr-only">Edit</span>
-                <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" /><path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd" /></svg>
+                <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" />
+                  <path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd" />
+                </svg>
               </button>
-              <button (click)="handleDelete(transaction)" class="p-1.5 text-gray-500 hover:bg-red-100 hover:text-red-600 rounded-full transition-colors">
+              <button 
+                (click)="handleDelete(transaction)" 
+                class="text-gray-400 hover:text-red-600 hover:bg-red-50 rounded p-1 transition-colors duration-150">
                 <span class="sr-only">Delete</span>
-                <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm4 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd" /></svg>
+                <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm4 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd" />
+                </svg>
               </button>
             </div>
           </div>
